# talk

./: .env.example  .gitignore  CLAUDE.md  GETTING_STARTED.md  Makefile  Makefile.bak.20250806-063552  Makefile.bak.20250806-063736  Makefile.bak.20250806-065224  Makefile.bak.20250806-065557  Makefile.bak.20250806-065731  Makefile.bak.20250806-070606  README.md  REMINISCING_USAGE.md  benchmark_report.txt  checkpoint_gpu_test_results.json  compare_talk_v13_claude_code.py  demo_reminiscing_agent.py  evolution_example.json  evolution_history.json  example_serena_usage.py  hrm_architectural_analysis.json  hrm_checkpoint_path.txt  hrm_codebase_analysis.json  hrm_codebase_analysis_results.json  hrm_design_results.json  hrm_domain_adaptation_results.json  hrm_incremental_learning_results.json  hrm_real_implementation_results.json  install_talk.sh  minimal_hrm_results.json  pretrained_hrm_test_results.json  pyproject.toml  real_gpu_hrm_results.json  requirements.txt  research_p0UOYuA5RdU.json  run_talk.sh  run_test.py  run_v17_scaled_demo.py  setup.py  start_serena_dashboard.py  (+27 more)
agent/: __init__.py  agent.py  messages.py  output_manager.py  settings.py  settings_compat.py  storage.py
agent/llm_backends/: __init__.py  anthropic_backend.py  fireworks_backend.py  gemini_backend.py  openai_backend.py  openai_compatible.py  openrouter_backend.py  perplexity_backend.py  shell_backend.py
agent/tmp/: storage.py
agent/tools/: __init__.py  file_ops.py  handlers.py  shell_ops.py
docs/: CODEBASE_OVERVIEW.md  COMMUNICATION_ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_SUMMARY.md  INSTALL.md  LIVE_TEST_RESULTS.md  PRODUCTION_STATUS.md  README.md  REPOSITORY_STRUCTURE.md  SYSTEM_STATUS_FINAL.md  agent_ideas.md  ai_healthcare_research.md  claude_code_vs_gpt_bash.md  codebase_agent_summary.md  file_agent_comparison.csv  quantum_test.md  talk_comprehensive_generation_analysis.md  talk_execution_plans.md  talk_output_analysis.md  talk_v12_tracking_summary.md  talk_v13_vs_claude_code.md  talk_v2_architecture.md
docs/agents/: branching_agent.md  code_agent2.md  execution_planner_agent.md  file_agent2.md  refinement_agent.md
docs/analysis/: agent_usage_by_talk_version.md  talk_capability_test_report.md  talk_extreme_challenge_report.md  talk_technical_evolution_report.md  talk_test_results_summary.md  talk_vs_claude_code_comparison.md
docs/examples/: listen_v4_requirements.txt  listen_v4_tts_integration.py
docs/guides/: listen_v4_setup_guide.md  testing_guide.md
docs/listen/: COMPREHENSIVE_TESTING_REPORT.md  LISTEN_V4_FEATURES.md  LISTEN_V5_ARCHITECTURE.md  LISTEN_V5_COMPLETION.md  LISTEN_V5_RESEARCH.md  LISTEN_V6_ARCHITECTURE.md  LISTEN_V6_DEPLOYMENT.md  LISTEN_V6_MCP_SETUP.md  LISTEN_V6_RESEARCH.md  (+1 more)
example_benchmarks/: basic_research_results.json  comparison_basic_research.json
examples/: config_examples.py  talk_comparison.py  workflow_demo.py
external_agents/: __init__.py  pyannote_agent.py  speaker_database.py  speechbrain_agent.py
listen/: README.md  demo_listen.py  listen.py  listen_cli.py  relevance_agent.py
orchestration/: enhanced_workflow_selector.py
plan_runner/: __init__.py  blackboard.py  context.py  plan_runner.py  step.py
runtime/: __init__.py  blackboard.py  context.py  plan_runner.py  step.py
special_agents/: __init__.py  active_listening_agent.py  assessor_agent.py  audio_listener_agent.py  branching_agent.py  code_agent.py  codebase_agent.py  completion_verifier_agent.py  conversation_manager.py  dev_tools_agent.py  enhanced_codebase_agent.py  enterprise_codebase_agent.py  execution_planner_agent.py  execution_planning_agent.py  file_agent.py  file_agent_simple.py  galaxy_decomposer_agent.py  git_agent.py  improved_file_prompt.md  information_organizer.py  intent_detection_agent.py  interjection_agent.py  listen_orchestrator_agent.py  mcp_executor_agent.py  meta_meta_orchestrator_agent.py  meta_orchestrator_agent.py  multi_source_orchestrator.py  naming_agent.py  planning_agent.py  real_speaker_identification_agent.py  refinement_agent.py  response_generation_agent.py  security_validator_agent.py  shell_agent.py  speaker_diarization_agent.py  speaker_identification_agent.py  sync_agent_wrapper.py  task_analysis_agent.py  test_agent.py  tts_synthesis_agent.py  (+4 more)
talk/: __init__.py  analyzer.py  cli.py  dynamic_talk.py  executor.py  file  hello.py  planner.py  talk.py  talk_beast.py  talk_curr.py  talk_v11_comprehensive.py  talk_v12_tracked.py  talk_v13_codebase.py  talk_v15_enterprise.py  talk_v16_meta.py  talk_v17_singularity.py  talk_v2.py  talk_v3_planning.py  talk_v4_validated.py  talk_v5_reminiscing.py
talk_workspace/: requirements.txt  setup.py  test_dynamic_talk.py  test_execution_planner.py  test_planning_agent.py
tests/: TEST_SUMMARY.md  __init__.py  diagnose_python_resolver.sh  my_intelligent_talk.py  smoke_test.py  test_basic_functionality.py  test_shell_agent.py
(+316 files in other folders)
