[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "talk"
version = "0.1.0"
description = "Agent framework for building autonomous, LLM-powered workflows"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
authors = [{ name = "Mark Anthony Koop", email = "mark@example.com" }]
keywords = ["llm", "agent", "ai", "chat", "framework", "openai", "anthropic", "gemini"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "typing-extensions>=4.5.0",
  "requests>=2.32",
  "beautifulsoup4>=4.12",
  "lxml>=5.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.5.0"]
gemini = ["google-generativeai>=0.3.0"]
all = [
  "openai>=1.0.0",
  "anthropic>=0.5.0",
  "google-generativeai>=0.3.0",
  "python-dotenv>=1.0.0",
]
dev = [
  "pytest>=7.0.0",
  "black>=23.0.0",
  "ruff>=0.1.0",
  "mypy>=1.0.0",
]

[project.scripts]
talk = "talk.talk:main"

[project.urls]
Homepage = "https://github.com/MarkAnthonyKoop/talk"
Repository = "https://github.com/MarkAnthonyKoop/talk"

[tool.setuptools.packages.find]
exclude = ["tests*"]
